[package]
name = "marquee-html-renderer"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Reference static HTML renderer for the Marquee markup language"
repository = "https://github.com/cube-drone/marqueemarkup"
keywords = ["markup", "html", "renderer", "marquee"]
categories = ["template-engine", "text-processing"]

[dependencies]
marquee-parser = { path = "../parser", version = "0.1.0" }
unicode-segmentation = "1"
serde_json = "1"
