[package]
# Registry name wears the cube-drone prefix (see ../parser/Cargo.toml).
name = "cube-drone-marquee-html-renderer"
version = "0.6.1"
edition = "2021"
license = "MPL-2.0"
description = "Reference static HTML renderer for the Marquee markup language"
repository = "https://github.com/cube-drone/marqueemarkup"
keywords = ["markup", "html", "renderer", "marquee"]
categories = ["template-engine", "text-processing"]

[lib]
name = "marquee_html_renderer"

[dependencies]
# Dependency-renamed so code says `use marquee_parser::` while the registry
# says cube-drone-marquee-parser.
marquee-parser = { package = "cube-drone-marquee-parser", path = "../parser", version = "0.6.1" }
unicode-segmentation = "1"
serde_json = "1"
