[package]
# Registry name wears the cube-drone prefix (crates.io has no scopes; the
# one namespace we feel polite mucking up is our own). Code keeps the pretty
# name via [lib] below.
name = "cube-drone-marquee-parser"
version = "0.6.0"
edition = "2021"
license = "MPL-2.0"
description = "Reference parser for the Marquee markup language"
repository = "https://github.com/cube-drone/marqueemarkup"
keywords = ["markup", "parser", "marquee"]
categories = ["parser-implementations", "text-processing"]

[lib]
name = "marquee_parser"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
